# yoshi_optionstrading

./: .gitignore  data_stock_240712.csv  data_stock_240716.csv  data_stock_240717.csv  data_stock_240719.csv  dataset.csv  makefile  prefect.yaml  pyproject.toml  readme.md  readme_concept.md  setup_project.sh
backend/: Dockerfile  pyproject.toml  readme_backend.md
backend/src/: api.py  config.py  data.py  data_stock_240717.csv  flow_store.py  main.py  mlflow_utils.py  model.py  orchaestrate.py  simple_deploy.py  simple_deploy_2.py  simple_flow-deployment.yaml  simple_flow.py  toy_flow.py  toy_flow_basic.py  toy_flow_deply.sh
backend/tests/: test_minio.py  test_mlflow_logging.py  test_prefect_client.py  test_prefect_serve.py  tests_prefect_aws.py
backend/toys/: toy_flow_deploy.sh  toy_flow_serve.py
backend/utils/: check_api.py  mlflow_utils.py  pull_envvars.py  setup_mlflow_env.sh
frontend/: Dockerfile  pyproject.toml
frontend/src/: app.py  helloworld.py
localhost:8081/0/: meta.yaml
mlflow/: Dockerfile
prefect/: Dockerfile  start.sh
services/: Makefile  docker-compose.dev.yml  docker-compose.prod.yml  env.dev  readme_services.md
services/caddy/: Caddyfile.dev
services/prefect/: prefect_configs.py  prefect_server.Dockerfile  test_postgredb.py
services_mlflow/: Caddyfile  Makefile  docker-compose.mlflow_dev.yml  logs_minio.txt  logs_mlflow.txt
services_mlflow/minio/: minio_init.sh  minio_mlflow.Dockerfile
services_mlflow/mlflow/: entrypoint.sh  mlflow_server.Dockerfile  pyproject.toml
services_prefect/: Caddyfile  Makefile  docker-compose.prefect_dev.yml  logs_caddy.txt  logs_prefect.txt  readme_prefect_v1.md
services_prefect/prefect/: create_workpool.sh  entrypoint.sh  prefect_configs.py  prefect_server.Dockerfile  pyproject.toml
services_prefect_server/: Caddyfile  Makefile  docker-compose.dev_server.yml  logs_caddy.txt  logs_prefect.txt  readme_prefect_v1.md
z_old/: docker-compose.yml  readme_infra.md  readme_softwaredevproces
z_old/prefect_agent/: prefect_agent.Dockerfile  prefect_agent.py
z_old/services_prefect_server copy/prefect/: prefect_server.Dockerfile  pyproject.toml
(+20 files in other folders)
