[tool.poetry]
name = "proj-backend"
version = "0.1.0"
description = "backend"
authors = ["lennardong <lennard.ong@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
mlflow = "^2.0"
prefect = "^2.0"
optuna = "^3.6.1"
evidently = "^0.4.29"
scikit-learn = "1.0.2"
pandas = "1.5.3"
numpy = "1.24.3"
matplotlib = "3.6.3"
seaborn = "0.12.2"
requests = "^2.32.3"
aiohttp = "^3.9.5"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
