[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["lennardong <lennard.ong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
