[tool.poetry]
name = "mlflow-server"
version = "0.1.0"
description = "MLflow server for experiment tracking and model registry"
authors = ["lennardong <lennard.ong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
mlflow = "^2.3.0"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
boto3 = "^1.26.0"
minio = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
