[tool.poetry]
name = "prefect_server"
version = "0.1.0"
description = ""
authors = ["lennardong <lennard.ong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
prefect = "^2.19.7"
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
